--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,30 @@
-.App {
-  text-align: center;
+.leaflet-container {
+  /* width: 100vw;
+  height: 100vh; */
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  /* background-repeat: no-repeat; */
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.funs {
+  margin-left: 5%;
+  width: 150px;
+  height: 90px;
+  cursor: pointer;
+  padding: 5px;
+  z-index: 999;
+
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#submit {
+  height: 20px;
+  width: 100px;
+
+
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app-container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
