--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,8 @@
   /* background-repeat: no-repeat; */
 }
 
-.funs {
+.funs,
+.polybutton {
   margin-left: 5%;
   width: 150px;
   height: 90px;
@@ -15,6 +16,14 @@
   padding: 5px;
   z-index: 999;
 
+}
+
+.polybutton {
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+  padding: 5px;
+  z-index: 9999999999999;
 }
 
 #submit {
