--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,14 @@
 
 }
 
+.polybutton {
+  width: 70px;
+  margin-left: 5%;
+  height: 40px;
+  cursor: pointer;
+  padding: 5px;
+}
+
 #submit {
   height: 20px;
   width: 100px;
